<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.Lab5.rActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <ImageView
                android:id="@+id/recipe_Image"
                android:layout_width="375dp"
                android:layout_height="199dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/title_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recipeName"
                android:textSize="21sp"
                android:textStyle="bold"
                />
           <TextView
            android:id="@+id/ingredientsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:layout_marginTop="20dp"
            android:text="@string/Ingredients"
            android:textSize="20sp"
               android:textStyle="bold"

            />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/ingredients"
                android:textSize="20sp"


                />

            <TextView
                android:id="@+id/procedure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Procedure"
                android:textSize="21sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="18dp"
                android:textSize="20sp"
                android:text="@string/recipe"

                />



        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>